test/extern/sungeun/externProcInClassShouldBeError.good
externProcInClassShouldBeError.chpl:114: error: cannot declare class types as export or extern
